--- a/todo.txt
+++ b/todo.txt
@@ -4,4 +4,7 @@
  -crop the board**
  -determine each gem*
   -determine pixel color*
- -put data into matrix
+ -put data into matrix*
+ -write a solver for the puzzle
+ -send input
+ -write the main loop
